--- a/math/advanced-mathematics/sequence_limits/sequence-limit.tex
+++ b/math/advanced-mathematics/sequence_limits/sequence-limit.tex
@@ -158,7 +158,7 @@
         \begin{itemize}
             \item 当$x\to 0$时，取$x_n = \displaystyle\frac{1}{n}$，若$\lim\limits_{x\to 0} f(x) = A$，则$\lim\limits_{n\to \infty} f(\displaystyle\frac{1}{n}) = A$
             \item 当$x\to +\infty$时，取$x_n = n$，若$\lim\limits_{x\to +\infty} f(x) = A$，则$\lim\limits_{n\to \infty} f(n) = A$。
-            \begin{analysisbox}[Case]
+            \begin{analysisbox}[Example]
                 \[
                     \lim_{n\to\infty}\frac{\ln n}{n}
                     = \lim_{x\to+\infty}\frac{\ln x}{x}
