--- a/math/advanced-mathematics/sequence_limits/sequence-limit.tex
+++ b/math/advanced-mathematics/sequence_limits/sequence-limit.tex
@@ -64,13 +64,6 @@
 
     \section{数列极限}
 
-    \subsection{数列}
-
-    \begin{enumerate}
-        \item 等差数列
-        \item 等比数列
-    \end{enumerate}
-
     \subsection{基础概念}
 
     \begin{enumerate}
@@ -364,7 +357,7 @@
                     &\Rightarrow \forall \epsilon > 0,\ \exists N > 0,\ n > N:\ |a_n - a| < \epsilon \\[4pt]
                     &\Rightarrow \bigl||a_n| - |a|\bigr| \le |a_n - a| < \epsilon
                     \quad (\text{由绝对值不等式}) \\[4pt]
-                    &\Rightarrow \lim_{n \to \infty} |a_n| = |a|.
+                    &\Rightarrow \lim_{n \to \infty} |a_n| = |a|. \\[4pt]
                     &\Rightarrow |a| - \epsilon < |a_n| < |a| + \epsilon \\[4pt]
                 \end{aligned}
             \]
