--- a/math/advanced-mathematics/sequence_limits/sequence-limit.tex
+++ b/math/advanced-mathematics/sequence_limits/sequence-limit.tex
@@ -134,7 +134,7 @@
 
         其中常考情形为 $b=0$
         \item \textbf{脱帽（严格不等）：} $\lim\limits_{n\to\infty} x_n > b \Rightarrow x_n > b \quad (\text{或 } \lim\limits_{n\to\infty} x_n < b \Rightarrow x_n < b)$
-        \item \textbf{带帽（非严格不等）：} $x_n \geq b \Rightarrow \lim\limits_{n\to\infty} x_n \geq b \quad (\text{或 } x_n \leq b \Rightarrow \lim\limits_{n\to\infty} x_n \leq b)$
+        \item \textbf{带帽（非严格不等）：} $x_n \geq b \Rightarrow \lim\limits_{n\to\infty} x_n \geq b \quad (\text{或 } x_n \leq b \Rightarrow \lim\limits_{n\to\infty} x_n \leq b)$。\emph{e.g.} $x_n > 1 \Rightarrow \lim\limits_{n\to \infty} x_n \geq 1$
     \end{enumerate}
 
     \subsection{定理}
@@ -147,7 +147,7 @@
             =
             \lim_{n\to\infty} a_n.
         \]
-        \item 海涅定理（归结原则）: 设 $f(x)$ 在$\mathring{U}(x_0,\delta)$内有定义，则$\lim\limits_{x\to x_0} f(x) = A$存在 $\Leftrightarrow$ 对任何$\mathring{U}(x_0,\delta)$内以$x_0$为极限的数列$\{x_n\}(x_n \neq x_0)$，极限$\lim\limits_{x\to x_0} f(x_n) = A$存在（\textbf{在极限存在的条件下，函数极限和数列极限可以相互转化}）
+        \item 海涅定理（归结原则）: 设 $f(x)$ 在$\mathring{U}(x_0,\delta)$内有定义，则$\lim\limits_{x\to x_0} f(x) = A$存在 $\Leftrightarrow$ 对任何$\mathring{U}(x_0,\delta)$内以$x_0$为极限的数列$\{x_n\}(x_n \neq x_0)$，极限$\lim\limits_{n\to \infty} f(x_n) = A$存在（\textbf{在极限存在的条件下，函数极限和数列极限可以相互转化}）
         \begin{itemize}
             \item 当$x\to 0$时，取$x_n = \displaystyle\frac{1}{n}$，若$\lim\limits_{x\to 0} f(x) = A$，则$\lim\limits_{n\to \infty} f(\displaystyle\frac{1}{n}) = A$
             \item 当$x\to +\infty$时，取$x_n = n$，若$\lim\limits_{x\to +\infty} f(x) = A$，则$\lim\limits_{n\to \infty} f(n) = A$。
@@ -172,8 +172,8 @@
     \subsection{结论}
 
     \begin{enumerate}
-        \item $\lim\limits_{n\to\infty} a_n = A \; {\color{red}{\Rightarrow}} \lim\limits_{n\to\infty} |a_n| = |A|$
-        \item $\lim\limits_{x\to x_0} f(x) = A \; {\color{red}{\Rightarrow}} \lim\limits_{x\to x_0} |f(x)| = |A|$
+        \item $\lim\limits_{n\to\infty} a_n = A \; {\color{green}{\Rightarrow}} \lim\limits_{n\to\infty} |a_n| = |A|$
+        \item $\lim\limits_{x\to x_0} f(x) = A \; {\color{green}{\Rightarrow}} \lim\limits_{x\to x_0} |f(x)| = |A|$
         \item $\lim\limits_{x\to x_0} f(x) = 0 \; {\color{red}{\Leftrightarrow}} \lim\limits_{x\to x_0} |f(x)| = 0$
         \item $\lim\limits_{n\to\infty} a_n = 0 \; {\color{red}{\Leftrightarrow}} \lim\limits_{n\to\infty} |a_n| = 0$ \\
         因此，若要证明
