--- a/math/advanced-mathematics/sequence_limits/sequence-limit.tex
+++ b/math/advanced-mathematics/sequence_limits/sequence-limit.tex
@@ -263,6 +263,7 @@
     \subsection{条件转换思路}
 
     \begin{enumerate}
+        \item 数列$\{a_n\}$非负有界 $\Rightarrow$ 存在$0 \leq m < M$，使得对任意$n \in \mathbb{N}^+$，有$m \leq a_n \leq M$
 
     \end{enumerate}
 
