--- a/math/advanced-mathematics/sequence_limits/sequence-limit.tex
+++ b/math/advanced-mathematics/sequence_limits/sequence-limit.tex
@@ -34,6 +34,8 @@
     bottom=4pt
 }
 
+\newcommand{\blueuline}[1]{{\color{blue}\uline{\color{black}{#1}}}}
+
 % =========================
 % 字体设置
 % =========================
@@ -172,8 +174,8 @@
     \subsection{结论}
 
     \begin{enumerate}
-        \item $\lim\limits_{n\to\infty} a_n = A \; {\color{green}{\Rightarrow}} \lim\limits_{n\to\infty} |a_n| = |A|$
-        \item $\lim\limits_{x\to x_0} f(x) = A \; {\color{green}{\Rightarrow}} \lim\limits_{x\to x_0} |f(x)| = |A|$
+        \item $\lim\limits_{n\to\infty} a_n = A \; {\color[rgb]{0.2, 0.6, 0.3}{\Rightarrow}} \lim\limits_{n\to\infty} |a_n| = |A|$
+        \item $\lim\limits_{x\to x_0} f(x) = A \; {\color[rgb]{0.2, 0.6, 0.3}{\Rightarrow}} \lim\limits_{x\to x_0} |f(x)| = |A|$
         \item $\lim\limits_{x\to x_0} f(x) = 0 \; {\color{red}{\Leftrightarrow}} \lim\limits_{x\to x_0} |f(x)| = 0$
         \item $\lim\limits_{n\to\infty} a_n = 0 \; {\color{red}{\Leftrightarrow}} \lim\limits_{n\to\infty} |a_n| = 0$ \\
         因此，若要证明
